Disable push notifications from debug panel

--- a/sdk/src/debug/res/layout/fragment_jivo_settings.xml
+++ b/sdk/src/debug/res/layout/fragment_jivo_settings.xml
@@ -163,6 +163,34 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:text="Push notifications"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
+
+            <!--suppress AndroidUnknownAttribute -->
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:text="Disable push notifications"
+                android:onCheckedChanged="@{(view, isChecked) -> fragment.onDisablePush(isChecked)}"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/grey" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:text="Information about user"
                 android:textColor="@color/black"
                 android:textSize="16sp"
