--- a/sdk/src/main/res/drawable/vic_send_green.xml
+++ b/sdk/src/main/res/drawable/vic_send_green.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="40"
     android:viewportHeight="40">
     <path
-        android:fillColor="#00C03D"
+        android:fillColor="#5ABD4E"
         android:fillType="evenOdd"
         android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0" />
     <path
