--- a/sdk/src/main/res/layout/dg_item_welcome_message.xml
+++ b/sdk/src/main/res/layout/dg_item_welcome_message.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/welcome"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginStart="44dp"
     android:background="@drawable/bg_incoming_message"
     android:gravity="start"
     android:maxWidth="275dp"
     android:padding="16dp"
-    android:layout_marginStart="44dp"
     android:text="@string/welcome_message_placeholder"
     android:textColor="@color/midnight"
     android:textSize="16sp" />
