--- a/sdk/src/main/res/drawable/vic_send_blue.xml
+++ b/sdk/src/main/res/drawable/vic_send_blue.xml
@@ -1,14 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="32dp"
     android:height="32dp"
-    android:viewportWidth="40"
-    android:viewportHeight="40">
+    android:viewportWidth="32"
+    android:viewportHeight="32">
     <path
         android:fillColor="#3983EF"
-        android:fillType="evenOdd"
-        android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0" />
+        android:pathData="M16,16m-16,0a16,16 0,1 1,32 0a16,16 0,1 1,-32 0" />
     <path
-        android:fillColor="#FFF"
-        android:fillType="nonZero"
-        android:pathData="M14.187,28.102l0.871,-5.4 11.052,-2.7 -11.052,-2.7 -0.87,-5.4 16.694,8.1 -16.695,8.1zM14.564,28.915c-0.641,0.311 -1.36,-0.243 -1.244,-0.96l0.871,-5.4c0.058,-0.357 0.32,-0.644 0.663,-0.728l11.051,-2.7v1.75l-11.05,-2.7c-0.345,-0.084 -0.606,-0.371 -0.664,-0.728l-0.871,-5.4c-0.116,-0.717 0.603,-1.272 1.244,-0.96l16.694,8.1c0.67,0.325 0.67,1.301 0,1.626l-16.694,8.1z" />
+        android:fillColor="#ffffff"
+        android:pathData="M16,10.353L16,10.353A0.9412,0.9412 0,0 1,16.9412 11.2942L16.9412,22.5883A0.9412,0.9412 0,0 1,16 23.5295L16,23.5295A0.9412,0.9412 0,0 1,15.0588 22.5883L15.0588,11.2942A0.9412,0.9412 0,0 1,16 10.353z" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M15.3818,9.7348L15.3818,9.7348A0.9412,0.9412 134.2567,0 1,16.7128 9.7348L22.0369,15.0589A0.9412,0.9412 134.2567,0 1,22.0369 16.3899L22.0369,16.3899A0.9412,0.9412 134.2567,0 1,20.7059 16.3899L15.3818,11.0658A0.9412,0.9412 134.2567,0 1,15.3818 9.7348z" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M16.7798,9.7348L16.7798,9.7348A0.9412,0.9412 45.7433,0 0,15.4488 9.7348L10.1247,15.0589A0.9412,0.9412 45.7433,0 0,10.1247 16.3899L10.1247,16.3899A0.9412,0.9412 45.7433,0 0,11.4557 16.3899L16.7798,11.0658A0.9412,0.9412 45.7433,0 0,16.7798 9.7348z" />
 </vector>
