--- a/sdk/src/main/res/layout/dg_item_agent_text.xml
+++ b/sdk/src/main/res/layout/dg_item_agent_text.xml
@@ -62,7 +62,7 @@
                     android:layout_height="wrap_content"
                     android:autoLink="all"
                     android:text="@{viewModel.text}"
-                    android:textColor="@color/midnight"
+                    android:textColor="@color/color_text_incoming_message"
                     android:textColorLink="@color/persianBlue"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toTopOf="@id/time"
