--- a/sdk/src/main/res/values/colors.xml
+++ b/sdk/src/main/res/values/colors.xml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="color_primary">#000000</color>
+    <color name="window_background">#ffffff</color>
+    <color name="color_surface">#ffffff</color>
+    <color name="color_on_background">#ffffff</color>
+    <color name="color_input_text">#1F1F1F</color>
+    <color name="color_background_input_text">#F1F0F0</color>
+    <color name="color_background_incoming_message">#F1F0F0</color>
+    <color name="color_text_incoming_message">#222D38</color>
+    <color name="color_text_connection_state">#000000</color>
+    <color name="color_background_connection_state">#ffffff</color>
+    <color name="color_background_banner">#ddffffff</color>
+    <color name="color_text_hint">#BABABA</color>
+    <color name="color_text_title">#ffffff</color>
+    <color name="color_text_subtitle">#ffffff</color>
+
     <color name="black">#000000</color>
     <color name="black30">#4D000000</color>
     <color name="nero">#1F1F1F</color>
     <color name="white">#ffffff</color>
     <color name="white30">#4Dffffff</color>
     <color name="white85">#ddffffff</color>
+    <color name="white_90">#1AFFFFFF</color>
     <color name="whiteSmoke">#F1F0F0</color>
     <color name="midnight">#222D38</color>
     <color name="darkPastelGreen">#18C139</color>
@@ -17,4 +33,5 @@
     <color name="apple">#5ABD4E</color>
     <color name="eastBay">#485667</color>
     <color name="royalBlue">#3983EF</color>
+    <color name="wellRead">#9F3E43</color>
 </resources>
