--- a/sdk/src/main/res/layout/dg_item_agent_file.xml
+++ b/sdk/src/main/res/layout/dg_item_agent_file.xml
@@ -78,9 +78,9 @@
                     android:layout_marginStart="8dp"
                     android:ellipsize="middle"
                     android:singleLine="true"
-                    android:text="@{viewModel.fileName}"
                     android:textColor="@color/midnight"
                     android:textSize="14sp"
+                    app:fileName="@{viewModel.newState}"
                     app:layout_constraintBottom_toTopOf="@id/download"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0"
@@ -96,13 +96,12 @@
                     android:clickable="true"
                     android:focusable="true"
                     android:onClick="@{() -> view.onDownload()}"
-                    android:text="@string/message_download"
                     android:textColor="@color/grey"
                     android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="@id/picture"
                     app:layout_constraintStart_toEndOf="@id/picture"
                     app:layout_constraintTop_toBottomOf="@id/fileName"
-                    app:mediaStatus="@{viewModel.state}" />
+                    app:mediaStatus="@{viewModel.newState}" />
 
                 <TextView
                     android:id="@+id/time"
