--- a/sdk/src/main/res/layout/dg_item_client_image.xml
+++ b/sdk/src/main/res/layout/dg_item_client_image.xml
@@ -38,7 +38,7 @@
             android:id="@+id/mediaContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:agentImageLoader="@{viewModel.imageUrl}"
+            app:agentImageLoader="@{viewModel.newState}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/name">
 
@@ -46,7 +46,7 @@
                 android:id="@+id/image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="@{() -> view.onClick()}"
+                android:onClick="@{() -> view.show()}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@tools:sample/avatars" />
@@ -55,8 +55,7 @@
                 android:id="@+id/progress"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:layout_gravity="center"
-                android:visibility="visible" />
+                android:layout_gravity="center" />
 
             <LinearLayout
                 android:id="@+id/statusContainer"
