--- a/sdk/src/main/res/layout/dg_item_agent_image.xml
+++ b/sdk/src/main/res/layout/dg_item_agent_image.xml
@@ -40,7 +40,7 @@
             android:layout_marginStart="60dp"
             android:layout_marginEnd="40dp"
             android:orientation="vertical"
-            app:agentImageLoader="@{viewModel.newState}">
+            app:agentImageLoader="@{viewModel.state}">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/name"
