--- a/sdk/src/main/res/layout/dg_item_client_file.xml
+++ b/sdk/src/main/res/layout/dg_item_client_file.xml
@@ -64,7 +64,7 @@
                 android:singleLine="true"
                 android:textColor="@color/white"
                 android:textSize="14sp"
-                app:fileName="@{viewModel.newState}"
+                app:fileName="@{viewModel.state}"
                 app:layout_constraintBottom_toTopOf="@id/download"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0"
@@ -85,7 +85,7 @@
                 app:layout_constraintBottom_toBottomOf="@id/picture"
                 app:layout_constraintStart_toEndOf="@id/picture"
                 app:layout_constraintTop_toBottomOf="@id/fileName"
-                app:mediaStatus="@{viewModel.newState}"
+                app:mediaStatus="@{viewModel.state}"
                 tools:text="@string/message_download" />
 
             <TextView
