--- a/sdk/src/main/res/layout/dg_item_client_image.xml
+++ b/sdk/src/main/res/layout/dg_item_client_image.xml
@@ -38,7 +38,7 @@
             android:id="@+id/mediaContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:agentImageLoader="@{viewModel.newState}"
+            app:agentImageLoader="@{viewModel.state}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/name">
 
